syntax = "proto3";
package husky_demos.user_service_go.v1;
option go_package = "github.com/husky-demos/user-service-go/v1";
option java_package = "com.github.husky_demos.user_service_go.v1";

import "user.go.model.proto";

service UserService{
  rpc login(LoginRequest)returns(LoginResult){};
  rpc testResult(LoginRequest) returns(CommonResult){}; // 返回一个LoginResult
}